@@ -89,7 +89,7 @@ a.about_data.registry_link	{border-right:1px solid #000; text-align:left;}
 .default.graph			{padding-top:40px;}
 .default.about			{padding:10px 0; text-align:right;}
 .default.data			{padding:20px 0 40px 0; width:880px;}
-
+.default.mention		{display:flex; justify-content:space-between;}
 
 
 /*	Country Code List style - INDEX PAGE
@@ -229,7 +229,10 @@ span.stats_title.view	{display:inline-block; font-size:1.0em; color:#000; margin
 span.stats_num			{display:block; font-size:100px; color:#000;}
 span.stats_num.small	{display:block; font-size:52px;}
 span.stats_num.view		{display:inline-block; font-size:168px; color:#000; line-height:0.8em;} /* Table view */
-.declare.stats			{width:960px; margin:0 auto; color:#000; font-size:1.0em; line-height:1.4em; text-align:right;}	/* Date under stats */
+.main_mention			{color:#FFF; font-size:1.0em; line-height:1.4em; text-align:center;}
+.main_mention a			{display:block; background-color:#FFF; border-radius:6px; border:1px solid #000; padding:10px 20px;}
+.main_mention a:hover	{background-color:#e9e9e9;}
+.declare.stats			{color:#000; font-size:1.0em; line-height:1.4em; padding:10px 0; text-align:right;}	/* Date under stats */
 
 a.stats_link			{display:block; padding:30px 40px; height:100%; background-color:#FFF; border-radius:6px; border:1px solid #000; margin:15px 5px 5px 10px;}
 a.stats_link.active		{margin-left:0; padding:40px;}
