@@ -241,8 +241,14 @@ IATI出版社
 #stats_missing_tip_text 
 那缺少日期的项目总数
 
+#main_mention_text
+将此发布商视为参与组织
+
+#main_mention_org_text
+以发布者身份查看此参与组织
+
 #declare_stats_text
-上面显示的数据已经提供了IATI为{ }今天的
+数据来自 IATI 注册处 {today}
 
 #list_active_text
 即将结束活动项目
