@@ -244,6 +244,12 @@ Total number of organisations that are reporting this data
 #stats_missing_tip_text
 Total number of projects that are missing dates
 
+#main_mention_pub_text
+View this Publisher as a Participating Org
+
+#main_mention_org_text
+View this Participating Org as a Publisher
+
 #declare_stats_text
 Data from IATI Registry on {today}
 
