@@ -241,8 +241,14 @@ Nombre d'organisations qui rapporte ces données
 #stats_missing_tip_text 
 Nombre total de projets qui sont les dates manquantes
 
+#main_mention_text
+Afficher cet éditeur en tant qu'organisation participante
+
+#main_mention_org_text
+Afficher cette organisation participante en tant qu'éditeur
+
 #declare_stats_text 
-Données affichées ci-dessus ont été fournies par IATI au {today}
+Données du registre IITA du {today}
 
 #list_active_text 
 Projets en cours se terminant bientôt 
