@@ -241,8 +241,14 @@ IATI<br/>प्रकाशक
 #stats_missing_tip_text 
 तारीखें याद कर रहे हैं कि परियोजनाओं की कुल संख्या
 
+#main_mention_text
+इस प्रकाशक को एक सहभागी संगठन के रूप में देखें
+
+#main_mention_org_text
+इस सहभागी संगठन को एक प्रकाशक के रूप में देखें
+
 #declare_stats_text
-ऊपर प्रदर्शित डेटा { आज } के रूप में IATI द्वारा प्रदान की गई है
+IATI रजिस्ट्री से डेटा {today}
 
 #list_active_text
 जल्द ही समाप्त सक्रिय परियोजनाओं
