@@ -241,8 +241,14 @@ IATIパブリッシャ
 #stats_missing_tip_text 
 日付が欠落しているプロジェクトの総数
 
+#main_mention_text
+このパブリッシャーを参加組織として表示する
+
+#main_mention_org_text
+この参加組織をパブリッシャーとして表示する
+
 #declare_stats_text
-上記の表示されるデータは、 {today}のようIATIによって提供されている
+IATI レジストリからのデータ {today}
 
 #list_active_text
 まもなく終了アクティブなプロジェクト
