@@ -241,8 +241,14 @@ Número total de organizaciones que están reportando estos datos
 #stats_missing_tip_text 
 Número total de proyectos que son fechas faltantes
 
+#main_mention_text
+Ver este editor como una organización participante
+
+#main_mention_org_text
+Ver esta organización participante como editor
+
 #declare_stats_text 
-Los datos que se muestran más arriba ha sido proporcionada por IATI como de {today}
+Datos del Registro IATI el {today}
 
 #list_active_text 
 Proyectos recientemente terminados
