@@ -136,8 +136,17 @@
 			</td>
 		</tr>
 	</table>
-	{main_declare_stats}
+	<div class="default mention">{main_mention}{main_declare_stats}</div>
 </div>
+
+#main_mention
+<div class="main_mention"></div>
+
+#main_mention_pub
+<a href="#">{main_mention_pub_text}</a>
+
+#main_mention_org
+<a href="#">{main_mention_org_text}</a>
 
 #main_declare_stats
 <div class="declare stats">{declare_stats_text}</div>
