@@ -1,3 +1,9 @@
+Development Portal (2024-03-07 shi)
+==============================
+Add mention links for publisher and participating-org #661
+Update all translation pages
+
+
 Development Portal (2024-01-23 shi)
 ==============================
 Update Contact Publisher link
